Moved Nupack and Vienna tests to optional tests (not CI)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - "pip install -r requirements.txt"
   - "pip install ."
 # command to run tests
-script: nosetests --exclude slow_tests
+script: nosetests --exclude optional_tests
