--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-biopython==1.62
-intermine==1.09.05
-matplotlib==1.3.1
-numpy==1.8.0
+argparse==1.2.1
+biopython==1.66
+numpy==1.10.2
+wsgiref==0.1.2
