Style (and semantics) fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 ~*
 *__pycache__
 *.coverage
+*.egg-info
 *.error
+*.idea
+*.ipynb_checkpoints
 *.log
 *.pyc
 *.so
-*.ipynb_checkpoints
+*.spyderworkspace
 *.swp
 .pypirc
-*.egg-info
 dist
 build
 docs/_build
