--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - "pip install -r requirements.txt"
 # run tests
-script: nosetests --exclude optional_tests
+script: nosetests --exclude optional_tests\|test_nupack
 # speed up CI by caching dependencies
 cache:
   pip: true
