Testing out zest.releaser for automated releases, cleaned up style

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,5 @@
 [nosetests]
-exclude=optional_tests|test_nupack
+exclude = optional_tests|test_nupack
+[zest.releaser]
+python-file-with-version = coral/__init__.py
+create-wheel = yes
