--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,6 @@ exclude = optional_tests|test_nupack
 [zest.releaser]
 python-file-with-version = coral/__init__.py
 create-wheel = yes
+[check-manifest]
+ignore =
+    .travis.yml
