--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,21 +1,21 @@
 recursive-include coral *.pyx
 recursive-include bin *.py
 
-recursive-include docs *.ipynb
-recursive-include docs *.ape
-recursive-include docs *.bat
-recursive-include docs *.csv
+recursive-include docs *.ipynb *.py *.rst
+recursive-include docs *.ape *.csv *.seq *.text
 recursive-include docs *.png
-recursive-include docs *.py
-recursive-include docs *.rst
-recursive-include docs *.seq
-recursive-include docs *.text
-recursive-include docs Makefile
+recursive-include docs *.bat Makefile
 
-recursive-include tests *
+recursive-include tests *.py
+recursive-include tests *.ape *.fasta *.tsv
+recursive-include tests *.epairs *.ppairs *.cx-epairs *.ocx-epairs *.cx-fpairs *.ocx-mfe
+
 include requirements.txt
 include dev-requirements.txt
 include coral/sequence/d3-plasmid.js
 include COPYING
 include *.md
 include *.sh
+
+prune *.pyc
+prune *.ipynb_checkpoints
