Removed wheel build until linux platform supported

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 exclude = optional_tests|test_nupack
 [zest.releaser]
 python-file-with-version = coral/__init__.py
-create-wheel = yes
+create-wheel = no
 [check-manifest]
 ignore =
     .travis.yml
